# pythonAPIlogin

./: .gitignore  pyproject.toml  server.py  user.db
app/: api.py  database.py
app/auth/: auth.py
app/controllers/: user_controller.py
app/models/: UserModel.py
app/routes/: users.py
app/schemas/: UserSchema.py
config/: .env_exemple
loginSystem/: api.py  database.py  models.py  schema.py  schemas.py  userSchema.py
loginSystem/routes/: user_routes.py  users.py
tests/: test_user_controller.py
