[tool.poetry]
name = "nome_do_projeto"
version = "0.1.0"
description = "Descrição do seu projeto"
authors = ["Seu Nome <seu@email.com>"]

[tool.poetry.dependencies]
python = "^3.8"
# Adicione suas dependências aqui, por exemplo:
# requests = "^2.26.0"
python-dotenv = "^1.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
