[tool.poetry]
name = "nome_do_projeto"
version = "0.1.0"
description = "Descrição do seu projeto"
authors = ["Seu Nome <seu@email.com>"]

[tool.poetry.dependencies]
python = "^3.8"
# Adicione suas dependências aqui, por exemplo:
# requests = "^2.26.0"
python-dotenv = "^1.0.1"
uvicorn = "^0.29.0"
fastapi = "^0.111.0"
sqlalchemy = "^2.0.30"
pydantic = "^2.7.1"
passlib = "^1.7.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
